# EverybodyLovesRay

./: CMakeLists.txt  common.h  main.cpp  math.h
oop/: CMakeLists.txt  Makefile  bmpIO.cpp  bmpIO.h  camera.cpp  camera.h  illumination.cpp  illumination.h  main.cpp  object.cpp  object.h  ray.h
